--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "FNA"]
 	path = FNA
 	url = https://github.com/FNA-XNA/FNA
+[submodule "Nez"]
+	path = Nez
+	url = https://github.com/prime31/Nez
